tests/react_functional/react_functional.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:2

Cannot create `F` element because property `foo` is missing in props [1] but exists in object type [2].

   test.js:6:2
   6| <F />; // error: missing `foo`
       ^

References:
   test.js:6:1
   6| <F />; // error: missing `foo`
      ^^^^^ [1]
   test.js:3:19
   3| function F(props: { foo: string }) {
                        ^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:9

Cannot create `F` element because number [1] is incompatible with string [2] in property `foo`.

   test.js:7:9
   7| <F foo={0} />; // error: number ~> string
              ^ [1]

References:
   test.js:3:26
   3| function F(props: { foo: string }) {
                               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot create `Z` element because number [1] is not a React component.

   test.js:17:2
   17| <Z />; // error, expected React component
        ^

References:
   test.js:16:9
   16| var Z = 0;
               ^ [1]



Found 3 errors
